updated demo with feedback buttons to update/retrain  model

--- a/Project/shlok/demo-app-report/src/app/dashboard/profile/profile.component.html
+++ b/Project/shlok/demo-app-report/src/app/dashboard/profile/profile.component.html
@@ -21,7 +21,7 @@
             About our Project: <a href="dashboard/introduction">Introduction</a>
           </div>
           <div class="text">
-            Project Demo: <a href="dashboard/Demo">Demo</a>
+            Project Demo: <a href="dashboard/demo">Demo</a>
           </div>
           
           <div class="text">
