updating css for introduction component

--- a/Project/shlok/demo-app-report/src/app/dashboard/notification/notification.component.css
+++ b/Project/shlok/demo-app-report/src/app/dashboard/notification/notification.component.css
@@ -9,3 +9,13 @@
 .place{
   padding: 20px;
 }
+
+
+.text{
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+
+.section-title{
+  font-weight: 400;
+}
