update demo code

--- a/Project/shlok/demo-app-report/src/app/dashboard/profile/profile.component.html
+++ b/Project/shlok/demo-app-report/src/app/dashboard/profile/profile.component.html
@@ -18,10 +18,11 @@
           </div>
 
           <div class="text">
-            About our Project: <a href="dashboard/introduction">Introduction</a>
+            About our Project: <a href="https://medium.com/@shloknangia/the-truth-behind-fake-news-tools-and-techniques-for-detection-badd76b61a7c">Medium Link</a>
           </div>
           <div class="text">
-            Project Demo: <a href="dashboard/demo">Demo</a>
+            Project Demo: <a  href="#/dashboard/demo"  (click)="openDemo()">Demo</a>
+            <!-- [href]="[menuItem.path] routerLinkActive="active" routerLink="/dashboard/demo"-->
           </div>
           
           <div class="text">
